objects/User_Notification_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check the whether the notification is active for this user or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Event_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Event ID</label>
        <referenceTo>Notification_Event__c</referenceTo>
        <relationshipLabel>User Notification Subscriptions</relationshipLabel>
        <relationshipName>User_Notification_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Notification_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Notification Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UNS-{00000000}</displayFormat>
        <label>User Notification Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Notification Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>